--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Image gallery</title>
 
+  <link rel="icon" href="data:;base64,=">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
   <link rel="stylesheet" href="css/common.css" />
   <link rel="stylesheet" href="css/styles.css" />
